# 30122-Film-Insight

./: README.md  pyproject.toml
film_insight/: LDA_analysis.py  __main__.py  analysis.py  app.py  data_clean.py  douban.py  graph_analysis.py  rottentomatoes_scraper.py  sentiment_analysis_test.py  wordcloud_analysis.py  主题词频表.xlsx
film_insight/dashboard/: dash.py  dash_main.py  dash_prep.py
film_insight/data/: Rottentomatoes_sentiment_analysis.xlsx  china.txt  douban_clean.xlsx  douban_data.xlsx  douban_url.xlsx  douban_word.xlsx  english.txt  rottentomatoes_clean.xlsx  rottentomatoes_data.xlsx  rottentomatoes_url.xlsx  rottentomatoes_word.xlsx  ~$douban_data.xlsx
film_insight/data_process/: LDA_analysis.py  data_clean.py  graph_analysis.py  sentiment_analysis.py  wordcloud_analysis.py
film_insight/data_scraper/: douban_scraper.py  rottentomatoes_scraper.py
film_insight/scraper/: douban scraper.py  rottentomatoes scraper.py
film_insight/sentiment_analysis/: Douban_sentiment_analysis.xlsx  douban_clean_sentiment_analysis.xlsx  labels.txt  library.xlsx  rottentomatoes_clean_sentiment_analysis.xlsx  sentiment_analysis.py  sentiment_analysis_test.py  ~$rottentomatoes_clean.xlsx
